--- a/zeroKata.css
+++ b/zeroKata.css
@@ -9,6 +9,7 @@ body{
     align-items: center;
     flex-direction:column;
 }
+
 .swap-player{
     gap:20px;
     display:flex;
@@ -21,21 +22,21 @@ body{
 
     
 }
-.box{
+.swap-player div{
     font-size: 25px ;
 }
-.player-time{
-    border-radius:10px;
+.currentPlayerInfo{
+    border-radius:7px;
     background-color: #00115ee1;;
     color:white;
-    padding:10px;
+    padding:10px 20px;
     
 }
 .O{
     color:black;
 }
 .X{
-    color: green;
+    color: rgb(250, 13, 13);
 }
  
 
@@ -89,15 +90,20 @@ body{
 }
 
 .result button {
+    border: 2px solid gold;
+    /* border: none; */
     background-color: rgba(0, 0, 255, 1);;
     border-radius:17px;
     color:white;
-    padding:5px 20px;
+    padding:15px 30px;
     font-size:17px;
-    font-family: 'Instrument Sans', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 700;
     cursor:pointer;
 }
-
+.result button:hover{
+    border: 2px solid transparent;
+}
 .result h1{
     color: #fff;
     background-color: rgba(0,0,150 , 0.5);
